Ajout de la table de session et mise en place du back-office avec filament
